# OxiSQL

./: README.md  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/db/: mod.rs  schemas.rs
src/views/: index.ts
src/views/CreateNew/: index.tsx
src/views/Database/: index.tsx
src/views/Home/: index.tsx
src/views/Home/components/: DatabaseProfile.tsx
